# memtailor

./: CMakeLists.txt  Makefile.am  autogen.sh  configure.ac  memtailor_1.0~git20130809.orig.tar.gz.delta  memtailor_1.0~git20130809.orig.tar.gz.id
.github/workflows/: build.yml
debian/: changelog  control  copyright  libmemtailor-dev.install  libmemtailor0.install  libmemtailor0.symbols  rules  watch
debian/patches/: find_gtest.patch  link_pthread.patch  series
src/: CMakeLists.txt  memtailor.cpp  memtailor.h
